# habitat-sim

./: setup.py
docs/: conf.py  index.rst
docs/examples/: new_actions.rst  notebooks.rst  stereo_agent.rst
docs/src/: agent.rst  backend.rst  simulator.rst  utils.rst
habitat_sim/: simulator.py  utils.py
habitat_sim/agent/: __init__.py  agent.py  controls.py
habitat_sim/bindings/: __init__.py
habitat_sim/nav/: __init__.py  greedy_geodesic_follower.py
src/: CMakeLists.txt
src/esp/bindings/: bindings.cpp
src/esp/gfx/: Sampler.cpp  Sampler.h
src/esp/sensor/: Sensor.cpp
src/utils/sampler/: CMakeLists.txt  sampler.cpp
src/utils/viewer/: CMakeLists.txt
